base/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: bookstack-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
        # MOVED THIS HERE: Inside 'containers', not 'volumes'
        - name: mysqld-exporter
          image: prom/mysqld-exporter
          ports:
            - containerPort: 9104
              name: metrics
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-data
