base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: bookstack-dev
  labels:
    app: bookstack
spec:
  selector:
    app: bookstack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
